[package]
name = "ssh_ng"
version = "0.0.1"
edition = "2021"
authors = [
    'x0f5c3 <x0f5c3@tutanota.com>'
]
description = "In addition to encryption library, pure RUST implementation of SSH-2.0 client protocol"
keywords = ["ssh", "sshAgreement", "sshClient"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/x0f5c3/ssh_ng"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
dangerous-algorithms = ["dangerous-rsa-sha1", "dangerous-dh-group1-sha1"]
dangerous-rsa-sha1 = ["sha1"]
dangerous-dh-group1-sha1 = []

[dependencies]
log = "0.4"
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }
strum_macros = "0.25"
# the crate rsa has removed the internal hash implement from 0.7.0
sha1  = { version = "0.10.5", default-features = false, features = ["oid"], optional = true }
sha2  = { version = "0.10.6", default-features = false, features = ["oid"]}
rsa = "0.9.2"
aes = { version = "0.8.2"}
ssh-key = { version = "0.5.1", features = ["rsa", "ed25519", "p256", "alloc", "p384", "dsa", "std", "serde", "subtle", "encryption", "getrandom"]}
signature = "2.1.0"
hmac = "0.12.1"
filetime = "0.2"
anyhow = "1.0.71"
subtle = "2.5.0"
thiserror = "1.0.40"
shadow-rs = "0.23.0"


[dependencies.crypto]
version = "0.5.0"
features = ["aead", "cipher", "digest", "elliptic-curve", "signature", "universal-hash", "password-hash", "getrandom", "std"]


[dependencies.aead]
version = "0.5.2"
features = ["std", "stream", "getrandom", "alloc"]

[dependencies.tracing]
version = "0.1.37"
features = ["attributes", "log"]


[dependencies.p256]
version = "0.13.2"
features = ["serde", "ecdh"]

[dependencies.x25519-dalek]
version = "2.0.0-rc.2"
features = ["getrandom", "serde"]

[dependencies.ctr]
version = "0.9.2"
features = ["std", "block-padding", "zeroize"]

[dependencies.strum]
version = "0.25.0"
features = ["phf", "derive"]

[dependencies.blake3]
version = "1.4.0"
features = ["std", "traits-preview", "digest", "rayon"]

[dependencies.chacha20poly1305]
version = "0.10.1"
features = ["std", "stream"]

[dependencies.chacha20]
version = "0.9.1"
features = ["std", "zeroize"]

[dependencies.poly1305]
version = "0.8.0"
features = ["std"]

# async
# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# tokio = { version = "^1", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
# tokio = { version = "^1", features = [
#     "sync",
#     "macros",
#     "io-util",
#     "rt",
#     "time"
#     ]}

[dev-dependencies]
paste = "1"


[workspace]
resolver = "2"
members = [
    "crates/*"
]

[build-dependencies]
shadow-rs = "0.23.0"

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3

[[example]]
name = "bio"
path = "examples/bio"

[[example]]
name = "customized_algorithms"
path = "examples/customized_algorithms"