[package]
name = "ssh-encoding"
version = "0.2.0-pre.0"
description = """
Pure Rust implementation of SSH data type decoders/encoders as described
in RFC4251
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/RustCrypto/SSH/tree/master/ssh-encoding"
categories = ["authentication", "cryptography", "encoding", "no-std", "parser-implementations"]
keywords = ["crypto", "certificate", "key", "openssh", "ssh"]
readme = "README.md"
edition = "2021"
rust-version = "1.60"

[dependencies]
base64 = { package = "base64ct", version = "1.4", features = ["std"] }
pem = { package = "pem-rfc7468", version = "0.7", features = ["std"] }
sha2 = { version = "0.10", features = ["oid", "std"] }
thiserror = "1.0.40"

[dev-dependencies]
hex-literal = "0.4.1"

[features]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
